# sndwch

./: .dir-locals.el  .travis.yml  CMakeLists.txt  README.org  appveyor.yml
cmake/: FindLibYaml.cmake
include/: old_text.h  sndwch.h
src/: CMakeLists.txt  sndwch.c  sndwch.h  sndwch_dev.h  sndwch_fs.c
test/: CMakeLists.txt  main.c  test.c
test/assets/: config.yaml  cuts.yaml
test/assets/examples/: config.yaml
test/assets/expected/: config_parse.txt  slice.txt
